Styled start button, added custom scroll bar, fixed message alignment. Added so mic icon is red when is active.

--- a/style/main.scss
+++ b/style/main.scss
@@ -14,32 +14,64 @@ header h1{
     margin: 0;
     text-align: center;
 }
+#start{
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    padding: 25px 35px;
+    border-radius: 5px;
+    background:  #7289DA;
+    color: #fff;
+    border: none;
+    outline: none;
+    transform: translateY(-50%);
+    transform: translateX(-50%);
+    cursor: pointer;
+    font-size: 1.4em;
+}
 #container{
-    display: none;
     background: #2C2F33;
      #textDisplayContainer{
         height: 70vh;
         padding: 10px 15px;
-        display: grid;
         overflow-y: auto;
+
         p{
             background: #7289DA;
             padding: 5px 17px;
             text-align: center;
             border-radius: 15px;
-            margin: 5px;
+            margin: 25px 5px;
         }
             .right{
-                justify-self: right;
-                align-self: center;
-             
-
+                margin-left: auto;
+                width: 145px;
             }
             .left{
-                justify-self: left;
-                align-self: center;
+                margin-right: auto;
                 width: 145px;
+            }
+            //scroll bar
+            /* width */
+            &::-webkit-scrollbar {
+                width: 18px;
+            }
+            
+            /* Track */
+            &::-webkit-scrollbar-track {
+                background: $primaryColor;
+            }
+            
+            /* Handle */
+            &::-webkit-scrollbar-thumb {
+                background: rgb(56, 62, 83);
+                border-radius: 5px;
 
+            }
+            
+            /* Handle on hover */
+            &::-webkit-scrollbar-thumb:hover {
+                background: #7289DA;
             }
      }
      .inputs{
